# cjm-transcription-plugin-qwen3-forced-aligner

./: README.md  capability.html  capability.html.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_transcription_plugin_qwen3_forced_aligner/: _modidx.py  plugin.py
nbs/: index.ipynb  plugin.ipynb
tests_manual/: test_reconfigure.py  validate_qwen3_e2e.py
